# cmake-glfw-template

./: .gitignore  CMakeLists.txt  README.md
cmake/: BuildGLFW.cmake  FetchGLM.cmake  FindGLFW.cmake  FindGLM.cmake  README.md
src/: CMakeLists.txt  README.md
src/include/: README.md
src/test/: README.md
